# nai-codex

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
libs/api/: Cargo.toml
libs/api/src/: client.rs  error.rs  lib.rs  types.rs  util.rs
libs/core/: Cargo.toml
libs/core/src/: archive.rs  lexicon.rs  lib.rs  preset.rs  prompt_parser.rs
libs/server/: Cargo.toml
libs/server/src/: archive.rs  lexicon.rs  lib.rs  perset.rs  snippet.rs
scripts/: merge_lexicon.py
src/: main.rs
web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quasar.config.ts  test-parser.mjs
web/public/: _headers
web/src/components/: PromptEditor.vue  PromptSuggester.vue
web/src/composables/: index.ts  useAutocomplete.ts  useGalleryNavigation.ts  useImageMetadata.ts  useImageTools.ts  useImageUpload.ts  useNotificationPermission.ts
web/src/css/: app.scss
web/src/layouts/: MainLayout.vue
web/src/pages/: GalleryPage.vue  GeneratePage.vue  HomePage.vue  LexiconPage.vue  MetadataPage.vue  PresetsPage.vue  SnippetsPage.vue
web/src/router/: routes.ts
web/src/services/: api.ts
web/src/stores/: settings.ts  tasks.ts  theme.ts
web/src/utils/: promptParser.ts
