[package]
name = "codex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
codex-server = { path = "libs/server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

[workspace]
members = ["libs/api", "libs/core", "libs/server"]
