[package]
name = "codex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
dotenvy = "0.15"
codex-server = { path = "libs/server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

[workspace]
members = ["libs/api", "libs/core", "libs/server"]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Rhynia"]
