[package]
name = "codex-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
rand = "0.9.2"
reqwest = { version = "0.13", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
zip = "7"
