[package]
name = "codex-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
codex-api = { path = "../api" }
rand = "0.9"
redb = { version = "3", features = ["uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
tracing = "0.1"
