[package]
name = "codex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
codex-api = { path = "../api" }
rand = "0.9"
redb = { version = "3", features = ["uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
tracing = "0.1"
zip = "2"
