[package]
name = "codex-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
codex-core = { path = "../core" }
codex-api = { path = "../api" }
anyhow = "1"
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
base64 = "0.22"
zip = "2"
